--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sass": "^1.62.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.11",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "use-history": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
