--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.2",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@tanstack/react-query": "^4.29.12",
@@ -18,13 +19,16 @@
     "firebase": "^9.22.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "motion": "^10.16.2",
     "react": "^18.2.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.11.2",
+    "react-spring": "^9.7.1",
     "sass": "^1.62.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.11",
